# ENVI

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  readthedocs.yaml  requirements.dev.txt  requirements.txt  seereadthedocs
.github/workflows/: pre-commit-hooks.yaml  publish.yaml  test.yaml  tests.yaml
.ipynb_checkpoints/: README-checkpoint.md  pyproject-checkpoint.toml
docs/: docs_requirements.txt
docs/source/: ENVI.rst  conf.py  index.rst  modules.rst  scenvi.rst
docs/source/pages/: modules.rst
scENVI/: ENVI.py  output_layer.py  utils.py
scENVI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scenvi/: ENVI.py  __init__.py  _dists.py  dists.py  utils.py
scenvi/.ipynb_checkpoints/: ENVI-checkpoint.py  dists-checkpoint.py  utils-checkpoint.py
tests/: test_ENVI.py  test_output_layer.py  test_utils.py
