[tool.poetry]
name = "scenvi"
version = "0.2.10"
description = "Integration of scRNA-seq and spatial transcriptomics data"
authors = ["Doron Haviv"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flax = "^0.8.2"
chex = "^0.1.85"
optax = "^0.2.1"
tensorflow_probability = "^0.22.0"
clu = "^0.0.10"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
