[tool.poetry]
name = "scenvi"
version = "0.4.5"
description = "Integration of scRNA-seq and spatial transcpriptomics data"
authors = ["Doron Haviv"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
scanpy = "^1.11.0"
python = "^3.9"
flax = "^0.10.4"
optax = "^0.2.4"
tensorflow_probability = "^0.22.0"
clu = "^0.0.11"
tqdm = "^4.66.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
